<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_code_prompt"
        android:textColor="@color/defaultThemeColor"
        android:padding="10dp"
        android:textSize="@dimen/MaxTextSize"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="70dp"
        android:divider="?android:listDivider"
        android:dividerPadding="2dp"
        android:padding="10dp"
        android:weightSum="1">

        <EditText
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:hint="@string/sample_code"
            android:padding="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/defaultThemeColor"
            android:background="@drawable/curved_corners"
            android:inputType="number"
            android:id="@+id/direct_code_input"/>

        <EditText
            android:layout_height="match_parent"
            android:hint="@string/hint_amt"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/defaultThemeColor"
            android:background="@drawable/curved_corners"
            android:inputType="number"
            android:id="@+id/direct_amt_input"
            />

    </LinearLayout>

</LinearLayout>